media query added for tablet view to prevent our team overflow

--- a/assets/css/newstyle.css
+++ b/assets/css/newstyle.css
@@ -276,9 +276,13 @@ li.nav-item{
 
 .card{
     border:2px solid black;
-    height:47em;
+    height:100%;
     width:4em;
     font-family: 'RocknRoll One', sans-serif;
+}
+
+.col-sm{
+    display:flex;
 }
 
 .card-image{
@@ -658,6 +662,12 @@ li.nav-item{
     .title-intro{
         padding-left:0;
     }
+    .col-sm{
+        padding-bottom:2rem;
+    }
+}
+
+@media only screen and (max-width:820px){
     .col-sm{
         padding-bottom:2rem;
     }
